# fbas-graph-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  test.yml
src/: graph.rs  graph_generator.rs  io.rs  main.rs
test_data/: stellarbeat_nodes_2022-05-08.json
