[package]
name = "fbas-graph-generator"
version = "0.1.0"
edition = "2021"
authors = ["Charmaine Ndolo <Charmaine.Ndolo@hu-berlin.de>"]
license = "MIT"
keywords = ["stellar", "fbas", "mobilecoin", "centrality", "graphs"]
categories = ["command-line-utilities", "science", "network-analysis"]
default-run = "graph_generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "graph_generator"
path = "src/main.rs"

[dependencies]
fbas_analyzer = { version = "0.7", default-features = false}
fbas-reward-distributor = { git = "https://github.com/cndolo/fbas-reward-distributor", tag = "v0.1.0", default-features = true}
hex = "0.4.3"
structopt = "0.3"
